# home_moe_kernels

./: .gitignore  CMakeLists.txt  Dense.py  HoME.py  HoME_optimized.py  MLP.py  compare_expert_forward.py  compare_expert_forward_full.py  debug_batchnorm.py  debug_cutlass.py  moe_kernels.cu  qwen_moe_blocks.py  setup.py  simple_debug.py  test_home_kernels.py  test_home_meta_forward.py  test_home_moe.py  test_no_silu.py
.cache/clangd/index/: activation.h.4344845E4FF1BBBE.idx  aligned_buffer.h.28F1500DDC9B865F.idx  alignment.hpp.DD2028D35C80042F.idx  arch.h.C9A7F964621172AA.idx  arithmetic_tuple.hpp.26CA42CB68E1EBAA.idx  array.h.1704D44F779994A9.idx  array.hpp.C17CD6054641C993.idx  array_aligned.hpp.427FB6D4090C1C69.idx  array_planar_complex.h.F914CFB1BF937A6E.idx  array_subbyte.h.E81A2804230DB84E.idx  array_subbyte.hpp.7F986A566F630D75.idx  axpby.hpp.2E93958EA061C5DF.idx  barrier.h.0DED673DC6CC1632.idx  barrier.h.3FF26C06FE8DF494.idx  base_grouped.h.5D0FC0ACD06DA154.idx  bfloat16.h.65692E21F602A033.idx  bit_field.hpp.3A1D450A556541F8.idx  block_striped.h.E5905E7DA802ABF0.idx  cache_operation.h.E5CC144CCEFC0377.idx  clear.hpp.B25A0DD858765B17.idx  cluster_sm90.hpp.D884935BC69D7107.idx  complex.h.F8F3CD0A8542D3E4.idx  complex.hpp.475DD4F89B7CE293.idx  config.hpp.615FE1F04711550F.idx  constants.h.25434EF0B8F889D3.idx  conv2d_problem_size.h.166228708E357237.idx  conv3d_problem_size.h.80D7D90A88D8A1CB.idx  conversion_op.h.136BD78C61A91003.idx  convolution.h.EFE1F428A011F136.idx  cooperative_copy.hpp.F8C8898A96854108.idx  cooperative_gemm.hpp.D293A91165B6C453.idx  coord.h.C2CACB5C63B13248.idx  copy.hpp.46BA1CA563EC5E72.idx  copy.hpp.B99D72A1ACC44F94.idx  copy_atom.hpp.7E9C1B07C0B201B7.idx  copy_sm50.hpp.B95ED50886120532.idx  copy_sm75.hpp.3766F8773D8C38AD.idx  copy_sm80.hpp.699A4CAF4E5074F4.idx  copy_sm90.hpp.C22B52FBB4BE88CB.idx  copy_sm90_desc.hpp.5CFEB506AB82C82D.idx  (+290 more)
csrc/: home_kernel.cu  home_kernel_backup.cu
home_kernels.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: CMakeLists.txt  debug_simple.cpp  moe_gemm_relu_kernel.cu  moe_gemm_relu_kernel.h  moe_gemm_relu_kernel_optimized.cu  simple_test.cpp  test_bf16_vs_fp32.cpp  test_fp16_vs_fp32.cpp  test_moe_bn_silu_bf16.cpp  test_moe_gemm_relu.cpp  test_optimized_moe_gemm.cpp
